# quiztg

./: LICENSE  MEMORY_OPTIMIZATION.md  README.md  pyproject.toml
resources/data/: category_subcategory.csv  science.csv
resources/data/quizzes/001_programming/: 01_python.csv  02_java.csv
resources/data/quizzes/002_ca/: ca.csv
resources/data/quizzes/002_current_affairs/: 01_banking_and_finance.csv
resources/data/quizzes/003_basic_science/: 01_biology.csv  02_chemistry.csv  03_physics.csv
resources/data/quizzes/004_medical/: 01_medical.csv
src/quiz_app/: __init__.py  category_utils.py  main.py  question.py  question_loader_utils.py  question_utils.py  quiz.py  quiz_utils.py
src/quiz_app/old/: quiz_loader.py
src/quiz_app/utility_function/: answer_mapping.py  csv_validator.py  score_percentage.py
tests/: __init__.py
